# minimum

./: .gitignore  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
minimum/: __init__.py  api.py  constants.py  minimum_cls.py
minimum/tests/: test_minimum.py
minimum/tests/unit/: test_minimum.py
minimum_tests/unit/: test_minimum.py
src/: __init__.py  minimum.py
tests/unit/: test_minimum.py
