
[tool.poetry]
name = "min"
version = "0.1.0"
description = "Some description"
authors = [""]
license = "Proprietary"
homepage = ""

[tool.black]

[tool.poetry.dependencies]
python = "~3.8"

pytest = "^7.1.2"
pytest-cov = "^3.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
