[metadata]
name = minimum
version = 0.0.1
author = Noam Bamberger
author_email = noamba@gmail.com
description = Find the minimal element in a specific type of array
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/noamba/minimum
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
